# arbolab_mvp

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  LOGIC_AUDIT_REPORT.md  README.md  STRUCTURAL_AUDIT.md  arbolab.code-workspace  check_counts.py  check_workspaces.py  ci.txt  compose.prod.yaml  compose.yaml  curl_log.txt  curl_out.txt  curl_output.html  debug_settings.py  fix_sidebar_verify.txt  fix_verify.txt  handler_counts.txt  health_out.txt  health_out_syn.txt  import_error.txt  import_error_venv.txt  nginx.conf  onboarding_verify.py  out.txt  output.txt  overlay_verify.txt  podman.sh  pyproject.toml  pytest.ini  reproduce_logging_issue.py  reproduction_output.txt  seed_data.py  seed_workspaces.py  setup.sh  (+14 more)
.devcontainer/: Dockerfile  (+2 more)
apps/web/: README.md  main.py  pyproject.toml
apps/web/core/: access_log.py  config.py  database.py  domain.py  lab_cache.py  log_config.py  paths.py  plugin_nav.py  receipts.py  recipes.py  security.py  seeder.py
apps/web/migrations/: env.py
apps/web/migrations/versions/: 001_add_user_profile_fields.py  002_add_last_active_workspace_id.py
apps/web/models/: auth.py  user.py
apps/web/resources/seed/: users.json
apps/web/routers/: api.py  explorer.py  logs.py  plugins.py  settings.py  system.py  workspaces.py
apps/web/services/: __init__.py  log_service.py
apps/web/templates/: analysis.html  base.html  dashboard.html  explorer.html  lab.html  tree.html
apps/web/templates/auth/: login.html  register.html
apps/web/templates/components/: _footer.html  _sidebar_left.html  _sidebar_right.html
apps/web/templates/partials/: analysis_content.html  dashboard_content.html  entity_form.html  entity_list.html  explorer_content.html  inspector.html  inspector_placeholder.html  lab_content.html  logger_drawer.html  modal_form.html  plugin_content.html  recipe_history.html  tree_content.html  workspace_switcher_content.html
apps/web/templates/plugins/: plugin.html
apps/web/templates/settings/: lab_settings.html  settings_layout.html
apps/web/templates/settings/partials/: lab_config.html  lab_settings_content.html  profile_form.html  security_form.html  user_settings_content.html
apps/web/templates/workspaces/: new.html
apps/web/tests/: conftest.py  test_explorer_e2e.py  test_explorer_entity_list.py  test_explorer_ui.py  test_settings_account_deletion.py  test_settings_ui.py  test_settings_utc_offset.py
(+73 files in other folders)
