[build-system]
# The root itself is not published as a package, but declaring a build system
# keeps tools happy. Each package ships its own [build-system] + [project]
# in its nested pyproject.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
  "packages/arbolab",
  "packages/arbolab-logger",
]

[tool.uv]
dev-dependencies = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
  "pandas-stubs",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
lint.ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
explicit_package_bases = true

# List every src root here:
mypy_path = [
  "packages/"
]

files = [
  "packages/"
]
