[build-system]
# The root defines a lightweight meta-project for uv sync; it is not published.
# Each package ships its own [build-system] + [project] in its nested pyproject.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arbolab-workspace"
version = "0.0.0"
description = "Workspace meta-package for local development."
requires-python = ">=3.12"
dependencies = [
  "arbolab",
  "arbolab-logger",
]

[tool.uv.workspace]
members = [
  "packages/arbolab",
  "packages/arbolab-logger",
]

[tool.uv]
dev-dependencies = [
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
  "pandas-stubs",
]

[tool.uv.sources]
arbolab = { workspace = true }
arbolab-logger = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
lint.ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
explicit_package_bases = true

# List every src root here:
mypy_path = [
  "packages/"
]

files = [
  "packages/"
]
